--- a/index.html
+++ b/index.html
@@ -621,6 +621,17 @@
                 <h3 style="margin-bottom: 1rem;">Kafka Connect Configuration</h3>
                 <p style="color: #718096; margin-bottom: 1rem;">Pre-configured connector JSON for streaming this data source into Kafka. Adjust the configuration as needed for your Kafka Connect deployment.</p>
 
+                <div style="margin-bottom: 1.5rem; padding: 1rem; background: #fff3cd; border-radius: 8px; border-left: 4px solid #ffc107;">
+                    <h4 style="margin: 0 0 0.5rem 0; color: #856404; font-size: 0.95rem;">⚠️ Prerequisites</h4>
+                    <ul style="margin: 0; padding-left: 1.5rem; color: #856404; font-size: 0.875rem; line-height: 1.6;">
+                        <li>Kafka Connect must be running (default: <code style="background: #fff; padding: 0.1rem 0.3rem; border-radius: 3px;">localhost:8083</code>)</li>
+                        <li><strong>HTTP polling sources:</strong> Install <a href="https://github.com/castorm/kafka-connect-http" target="_blank" style="color: #d97706;">kafka-connect-http</a> plugin</li>
+                        <li><strong>SSE sources:</strong> Install <a href="https://github.com/cjmatta/kafka-connect-sse" target="_blank" style="color: #d97706;">kafka-connect-sse</a> plugin</li>
+                        <li><strong>WebSocket sources:</strong> Install a <a href="https://github.com/Seko47/kafka-connect-websocket" target="_blank" style="color: #d97706;">WebSocket connector</a> (see config notes)</li>
+                        <li>Place plugin JARs in <code style="background: #fff; padding: 0.1rem 0.3rem; border-radius: 3px;">$KAFKA_HOME/plugins/</code> and restart Kafka Connect</li>
+                    </ul>
+                </div>
+
                 <div class="code-snippet">
                     <button class="copy-btn" onclick="copyKafkaConfig()">Copy</button>
                     <pre id="kafkaConnectorConfig" style="margin: 0; white-space: pre-wrap; word-wrap: break-word;"></pre>
@@ -1328,38 +1339,46 @@
             let config = {};
 
             if (type === 'ws' || type === 'wss') {
-                // Using Kafka Connect HTTP plugin or custom connector
+                // WebSocket requires a dedicated connector - kafka-connect-http does NOT support WebSocket protocol
                 config = {
                     "name": `websocket-source-${connectorName}`,
                     "config": {
-                        "connector.class": "com.github.castorm.kafka.connect.http.HttpSourceConnector",
-                        "tasks.max": "1",
-                        "http.url": url,
-                        "http.request.method": "GET",
-                        "kafka.topic": topicName,
-                        "http.timer.interval.millis": "1000",
-                        "value.converter": "org.apache.kafka.connect.json.JsonConverter",
-                        "value.converter.schemas.enable": "false",
-                        "key.converter": "org.apache.kafka.connect.storage.StringConverter",
-                        "_comment": "Note: WebSocket requires custom connector or proxy. Consider using https://github.com/castorm/kafka-connect-http"
+                        "connector.class": "com.github.jcustenborder.kafka.connect.simulator.SimulatorSourceConnector",
+                        "_IMPORTANT": "⚠️ WebSocket streaming requires a specialized connector. The kafka-connect-http plugin does NOT support WebSocket protocol (it only does HTTP polling).",
+                        "_RECOMMENDED_CONNECTORS": [
+                            "Option 1: kafka-connect-ws - https://github.com/Seko47/kafka-connect-websocket",
+                            "Option 2: Build a custom WebSocket source connector",
+                            "Option 3: Use a WebSocket proxy service that converts to HTTP endpoints"
+                        ],
+                        "_EXAMPLE_CONFIG_WITH_KAFKA_CONNECT_WS": {
+                            "connector.class": "com.github.seko47.kafka.connect.websocket.WebSocketSourceConnector",
+                            "tasks.max": "1",
+                            "websocket.url": url,
+                            "kafka.topic": topicName,
+                            "websocket.reconnect.enabled": "true",
+                            "websocket.reconnect.interval.ms": "5000",
+                            "value.converter": "org.apache.kafka.connect.json.JsonConverter",
+                            "value.converter.schemas.enable": "false",
+                            "key.converter": "org.apache.kafka.connect.storage.StringConverter"
+                        },
+                        "_NOTE": "This is a placeholder config to show the structure. You must install a WebSocket-compatible connector first."
                     }
                 };
             } else if (type === 'sse') {
-                // SSE using HTTP Source Connector
+                // SSE (Server-Sent Events) requires dedicated SSE connector
                 config = {
                     "name": `sse-source-${connectorName}`,
                     "config": {
-                        "connector.class": "com.github.castorm.kafka.connect.http.HttpSourceConnector",
+                        "connector.class": "com.github.cjmatta.kafka.connect.sse.ServerSentEventsSourceConnector",
                         "tasks.max": "1",
-                        "http.url": url,
-                        "http.request.method": "GET",
-                        "http.request.headers": "Accept: text/event-stream",
-                        "kafka.topic": topicName,
-                        "http.response.parser": "com.github.castorm.kafka.connect.http.response.spi.HttpResponseParser",
+                        "sse.uri": url,
+                        "topic": topicName,
+                        "sse.reconnect.max.attempts": "10",
+                        "sse.reconnect.backoff.ms": "5000",
                         "value.converter": "org.apache.kafka.connect.json.JsonConverter",
                         "value.converter.schemas.enable": "false",
                         "key.converter": "org.apache.kafka.connect.storage.StringConverter",
-                        "_comment": "Requires kafka-connect-http plugin: https://github.com/castorm/kafka-connect-http"
+                        "_comment": "Requires kafka-connect-sse plugin: https://www.confluent.io/hub/cjmatta/kafka-connect-sse or https://github.com/cjmatta/kafka-connect-sse"
                     }
                 };
             } else {
@@ -1374,7 +1393,8 @@
                         "http.request.method": "GET",
                         "kafka.topic": topicName,
                         "http.timer.interval.millis": interval,
-                        "http.response.parser": "com.github.castorm.kafka.connect.http.response.spi.HttpResponseParser",
+                        "http.response.parser": "com.github.castorm.kafka.connect.http.response.jackson.JacksonHttpResponseParser",
+                        "http.response.list.pointer": "/",
                         "value.converter": "org.apache.kafka.connect.json.JsonConverter",
                         "value.converter.schemas.enable": "false",
                         "key.converter": "org.apache.kafka.connect.storage.StringConverter",
