--- a/index.html
+++ b/index.html
@@ -625,9 +625,9 @@
                     <h4 style="margin: 0 0 0.5rem 0; color: #856404; font-size: 0.95rem;">⚠️ Prerequisites</h4>
                     <ul style="margin: 0; padding-left: 1.5rem; color: #856404; font-size: 0.875rem; line-height: 1.6;">
                         <li>Kafka Connect must be running (default: <code style="background: #fff; padding: 0.1rem 0.3rem; border-radius: 3px;">localhost:8083</code>)</li>
-                        <li><strong>HTTP polling sources:</strong> Install <a href="https://github.com/castorm/kafka-connect-http" target="_blank" style="color: #d97706;">kafka-connect-http</a> plugin</li>
-                        <li><strong>SSE sources:</strong> Install <a href="https://github.com/cjmatta/kafka-connect-sse" target="_blank" style="color: #d97706;">kafka-connect-sse</a> plugin</li>
-                        <li><strong>WebSocket sources:</strong> Install a <a href="https://github.com/evolv34/kafka-connect-ws" target="_blank" style="color: #d97706;">WebSocket connector</a> (see config notes)</li>
+                        <li><strong>HTTP polling sources:</strong> Install <a href="https://github.com/castorm/kafka-connect-http" target="_blank" style="color: #d97706;">kafka-connect-http</a> plugin ✅</li>
+                        <li><strong>SSE sources:</strong> Install <a href="https://github.com/cjmatta/kafka-connect-sse" target="_blank" style="color: #d97706;">kafka-connect-sse</a> plugin ✅</li>
+                        <li><strong>WebSocket sources:</strong> ❌ No maintained Kafka Connect connector exists - see config for custom solutions</li>
                         <li>Place plugin JARs in <code style="background: #fff; padding: 0.1rem 0.3rem; border-radius: 3px;">$KAFKA_HOME/plugins/</code> and restart Kafka Connect</li>
                     </ul>
                 </div>
@@ -1346,29 +1346,33 @@
             let config = {};
 
             if (type === 'ws' || type === 'wss') {
-                // WebSocket requires a dedicated connector - kafka-connect-http does NOT support WebSocket protocol
+                // WebSocket requires a custom solution - NO actively maintained Kafka Connect WebSocket connectors exist
                 config = {
                     "name": `websocket-source-${connectorName}`,
                     "config": {
-                        "connector.class": "com.github.jcustenborder.kafka.connect.simulator.SimulatorSourceConnector",
-                        "_IMPORTANT": "⚠️ WebSocket streaming requires a specialized connector. The kafka-connect-http plugin does NOT support WebSocket protocol (it only does HTTP polling).",
-                        "_RECOMMENDED_CONNECTORS": [
-                            "Option 1: kafka-connect-ws - https://github.com/evolv34/kafka-connect-ws",
-                            "Option 2: Build a custom WebSocket source connector",
-                            "Option 3: Use a WebSocket proxy service that converts to HTTP endpoints"
-                        ],
-                        "_EXAMPLE_CONFIG_WITH_KAFKA_CONNECT_WS": {
-                            "connector.class": "com.github.evolv34.kafka.connect.ws.WebSocketSourceConnector",
-                            "tasks.max": "1",
-                            "websocket.url": url,
-                            "kafka.topic": topicName,
-                            "websocket.reconnect.enabled": "true",
-                            "websocket.reconnect.interval.ms": "5000",
-                            "value.converter": "org.apache.kafka.connect.json.JsonConverter",
-                            "value.converter.schemas.enable": "false",
-                            "key.converter": "org.apache.kafka.connect.storage.StringConverter"
+                        "_CRITICAL": "⚠️ There is NO actively maintained Kafka Connect WebSocket source connector available.",
+                        "_REALITY_CHECK": "All existing WebSocket connectors are 7-8 years old and abandoned. The kafka-connect-http plugin does NOT support WebSocket protocol (it only does HTTP polling).",
+                        "_RECOMMENDED_SOLUTIONS": {
+                            "option_1_custom_microservice": {
+                                "description": "Build a lightweight microservice that consumes WebSocket and produces to Kafka",
+                                "technologies": ["Node.js + kafkajs", "Python + confluent-kafka-python", "Go + sarama"],
+                                "pros": "Full control, easy to maintain, production-ready",
+                                "websocket_url": url,
+                                "kafka_topic": topicName
+                            },
+                            "option_2_kafka_streams_app": {
+                                "description": "Create a Kafka Streams application that connects to WebSocket",
+                                "pros": "Native Kafka integration, exactly-once semantics",
+                                "cons": "More complex than simple producer"
+                            },
+                            "option_3_build_custom_connector": {
+                                "description": "Develop your own Kafka Connect WebSocket source connector",
+                                "framework": "Kafka Connect Framework",
+                                "effort": "High - requires understanding Kafka Connect internals",
+                                "reference": "https://docs.confluent.io/platform/current/connect/devguide.html"
+                            }
                         },
-                        "_NOTE": "This is a placeholder config to show the structure. You must install a WebSocket-compatible connector first."
+                        "_EXAMPLE_NODEJS_PRODUCER": "const WebSocket = require('ws'); const { Kafka } = require('kafkajs'); const ws = new WebSocket('" + url + "'); const kafka = new Kafka({brokers: ['localhost:9092']}); const producer = kafka.producer(); ws.on('message', async (data) => { await producer.send({topic: '" + topicName + "', messages: [{value: data}]}); });"
                     }
                 };
             } else if (type === 'sse') {
