Fix HTTP polling duplicate messages bug
CRITICAL BUG FIX: startPolling() was creating multiple intervals

Issue: If startPolling() called multiple times (e.g., toggling auto-refresh,
changing intervals), it would create overlapping setInterval() calls without
clearing the previous one.

Result: Duplicate polling intervals running in parallel = duplicate messages
and exponential API request spam.

Fix: Call stopPolling() at start of startPolling() to ensure only one
interval is ever active.

Impact: Fixes duplicate messages users were seeing with HTTP polling.

--- a/index.html
+++ b/index.html
@@ -1021,6 +1021,9 @@
         }
 
         function startPolling() {
+            // Stop any existing polling first to prevent duplicates
+            stopPolling();
+
             const interval = parseInt(document.getElementById('pollingInterval').value);
             pollingInterval = setInterval(() => {
                 if (currentHttpUrl) {
