Add mixed content warning for HTTP/WS URLs on HTTPS pages
Prevents connection attempts to insecure HTTP/WS endpoints when the viewer
is served over HTTPS (e.g., GitHub Pages). Browser security policies block
mixed content (HTTPS page fetching HTTP resources).

Changes:
1. Added mixed content check in connect() function
   - Detects when page is served over HTTPS (window.location.protocol)
   - Blocks HTTP and WS URLs (only allows HTTPS and WSS)
   - Shows warning toast with 5-second duration

2. Enhanced showToast() function
   - Added optional duration parameter (default: 3000ms)
   - Allows longer display time for important warnings

Warning message:
"⚠️ Cannot connect to HTTP/WS from HTTPS page (mixed content blocked).
 Use HTTPS/WSS or run locally."

This helps users understand why HTTP endpoints don't work on GitHub Pages
while still allowing them to work when running locally (file:// protocol).

Note: Most modern streaming APIs use HTTPS/WSS anyway, so this primarily
affects local development endpoints or legacy APIs.

--- a/index.html
+++ b/index.html
@@ -815,6 +815,13 @@
                 return;
             }
 
+            // Check for mixed content (HTTP URL on HTTPS page)
+            if (window.location.protocol === 'https:' &&
+                (url.startsWith('http://') || url.startsWith('ws://'))) {
+                showToast('⚠️ Cannot connect to HTTP/WS from HTTPS page (mixed content blocked). Use HTTPS/WSS or run locally.', 5000);
+                return;
+            }
+
             if (connection) {
                 disconnect();
             }
@@ -1781,13 +1788,13 @@ done`;
             });
         }
 
-        function showToast(message) {
+        function showToast(message, duration = 3000) {
             const toast = document.getElementById('toast');
             toast.textContent = message;
             toast.classList.add('show');
             setTimeout(() => {
                 toast.classList.remove('show');
-            }, 3000);
+            }, duration);
         }
 
         // Scroll to top functionality
